# textgrid-transcriber

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: build.yml
assets/icons/: app.icns
linux/: install-linux.sh  textgrid-transcriber.desktop
pyinstaller/: textgrid-transcriber.spec
pyinstaller/hooks/: hook-imageio_ffmpeg.py
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/textgrid_transcriber/: asr.py  ffmpeg.py  main.py  project.py  segments_delegate.py  segments_model.py  splitter.py
