[project]
name = "textgrid-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-speech>=2.35.0",
    "imageio-ffmpeg>=0.5.1",
    "keyring>=25.7.0",
    "pydub>=0.25.1",
    "pyside6>=6.10.1",
    "textgrid>=1.6.1",
]

[project.scripts]
textgrid-transcriber = "textgrid_transcriber.main:main"

[tool.uv]
package = true
